--- a/workflow.yml
+++ b/workflow.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Push the Docker image
-        run: docker push my-image
+        run: docker push sauter-university-website
